chore: fixed private mind logo not displaying properly on iphones and safari (#624)
## Description

Fixed bug on iphones and safari with svg not displaying properly.

### Introduces a breaking change?

- [ ] Yes
- [x] No

### Type of change

- [ ] Bug fix (change which fixes an issue)
- [ ] New feature (change which adds functionality)
- [x] Documentation update (improves or adds clarity to existing
documentation)
- [ ] Other (chores, tests, code style improvements etc.)

### Tested on

- [x] iOS
- [] Android

### Testing instructions

<!-- Provide step-by-step instructions on how to test your changes.
Include setup details if necessary. -->

### Screenshots

<!-- Add screenshots here, if applicable -->

### Related issues

<!-- Link related issues here using #issue-number -->

### Checklist

- [ ] I have performed a self-review of my code
- [ ] I have commented my code, particularly in hard-to-understand areas
- [ ] I have updated the documentation accordingly
- [ ] My changes generate no new warnings

### Additional notes

<!-- Include any additional information, assumptions, or context that
reviewers might need to understand this PR. -->

--- a/docs/src/components/ReactNativeExecuTorchIntroduction/styles.module.css
+++ b/docs/src/components/ReactNativeExecuTorchIntroduction/styles.module.css
@@ -1,9 +1,19 @@
 .introductionContainer {
-  max-width: 996px;
+  max-width: 1280px;
   display: flex;
   flex-direction: column;
   margin-bottom: -8rem;
   gap: 4rem;
+}
+
+@media (max-width: 1280px) {
+  .introductionContainer {
+    max-width: 996px;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: -8rem;
+    gap: 4rem;
+  }
 }
 
 .introduction {
